--- a/CNN_plus_STN/outputs/readme
+++ b/CNN_plus_STN/outputs/readme
@@ -1,3 +1,5 @@
 This directory has outputs and graphs of my training.
 
 If the paths for where the output is saved are unchanged in .py files, this is where the outputs are saves
+
+model.pth is saved here, mine could not be uploaded due to bigger than 25mb size
